styles.css
/* ... */
.nav-item {
  height: 50px;
  width: 50px;
  display: flex;
  align-items: center;
  background-color: #2b2a2a;
  border-radius: 50%;
  transition: 0.25s;
  position: relative;
  margin-bottom: 15px;
}
.nav-item.active,
.nav-item:hover,
.nav-item.active i,
.nav-item:hover i {
  color: #fff;
}
.nav-item.active,
.nav-item:hover {
  background-color: #ffb400;
}
.nav-item i {
  color: #ddd;
  font-size: 2rem;
  transition: 0.25s;
  display: block;
  cursor: pointer;
  /* interesting way to center below */
  position: absolute;
  text-align: center;
  left: 0;
  right: 0;
  /* whoaaa this was genius. the nav links to other pages was only working as long as you weren't clicking on the font awesome icon. with the line below this it now works even if you click on the icons */
  pointer-events: none;
}
.nav-item a {
  height: 50px;
  width: 50px;
  display: block;
}
.nav-item h2 {
  font-size: 1.6rem;
  font-weight: 500;
  /* z-index: -1; */
  position: absolute;
  top: 0;
  right: 0;
  opacity: 0;
  color: #fff;
  line-height: 50px;
  font-weight: 500;
  transition: all 0.25s;
  border-radius: 30px;
  text-transform: uppercase;
  padding: 0 34px 0 30px;
  height: 50px;
}
.nav-item:hover h2 {
  opacity: 1;
  right: 27px;
  text-align: center;
  border-radius: 30px 0 0 30px;
  background-color: #ffb400;
}

/*** Homepage ***/
.home {
  overflow: hidden;
}
.home .content {
  width: 100%;
  height: 100vh;
  display: flex;
  align-items: center;
  justify-content: center;
}
.colour-block {
  height: 120vh;
  width: 400px;
  background-color: #ffb400;
  position: absolute;
  transform: rotate(-15deg);
  left: -200px;
}
.home .title-container {
  max-width: 600px;
  padding-left: 150px;
}
.home .title-container p {
  width: 130%;
}
.home h6,
h1 {
  text-transform: uppercase;
}
.home h6 {
  color: #eee;
  font-size: 2.2rem;
  font-weight: 400;
}
.home h1 {
  font-size: 4.5rem;
  color: #ffb400;
  font-weight: 700;
  margin: 10px 0;
}
.home h1 span {
  color: #fff;
  font-weight: 600;
}
.home .title-container p {
  color: #eee;
  font-size: 1.7rem;
  line-height: 3.2rem;
  margin-bottom: 35px;
}

/*** Titles of all pages aside from the homepage ***/
.title-section {
  width: 100%;
  text-align: center;
  text-transform: uppercase;
}
.title-section h1 {
  font-size: 5.6rem;
  font-weight: 900;
  color: #fff;
  margin: 0;
  line-height: 154px; /* matches the line height of the background text */
}
.title-section h1 span {
  color: #ffb400;
}
.title-section .title-background {
  font-size: 11rem;
  font-weight: 800;
  position: absolute;
  right: 0;
  left: 0;
  top: 0;
  /* z-index: -5; */
  letter-spacing: 1rem;
  color: rgba(255, 255, 255, 0.07);
}
main h2 {
  font-size: 2.2rem;
  text-transform: uppercase;
  margin-bottom: 15px;
}

/*** About page ***/
.seperation {
  width: 50%;
  margin: 70px auto 60px auto;
  height: 1px;
  background-color: #252525;
}
.about h2 {
  text-align: center;
}
.about .wrapper {
  display: flex;
  flex-wrap: wrap;
}
.personal-info,
.education {
  font-size: 1.6rem;
  width: 40%;
}
/* personal info section */
.personal-info .info-title {
  opacity: 0.8;
  margin-bottom: 3px;
}
.personal-info .info-description {
  margin-bottom: 10px;
}
.personal-info li:last-child {
  margin-top: 40px;
}
.personal-info li a {
  border: none;
  font-size: 1.5rem;
  padding: 13px 45px;
  cursor: pointer;
}

/* education section */
.education {
  width: 60%;
}
.education li {
  display: flex;
  justify-content: space-between;
  margin-bottom: 40px;
  position: relative;
}
.education .icon {
  width: 10%;
  background-color: #ffb400;
  border-radius: 50%;
  display: block;
  height: 40px;
  width: 40px;
  position: relative;
  z-index: 100;
}
.education .icon i {
  position: absolute;
  text-align: center;
  left: 0;
  right: 0;
  top: 50%;
  transform: translateY(-50%);
}
.education li::after {
  content: "";
  position: absolute;
  top: 40px;
  left: 20px;
  height: calc(100% - 40px);
  border-left: 1px solid #333;
  z-index: 0;
}
.education li:nth-child(2) {
  margin-bottom: 0;
}
.education-info {
  width: 85%;
}
.education-info .date {
  font-size: 1.2rem;
  background-color: #252525;
  padding: 3px 8px;
  border-radius: 8px;
  opacity: 0.8;
}
.education-info h3 {
  text-transform: uppercase;
  font-size: 1.8rem;
  margin: 15px 0;
}
.education-info h3 span {
  opacity: 0.8;
  font-size: 1.6rem;
}
.education-info p {
  font-size: 1.4rem;
  color: #eee;
  font-family: "Open Sans", sans-serif;
}

/* my skills section */
.my-skills {
  width: 75%;
  margin: 0 auto 50px auto;
  text-align: center;
}
.my-skills ul {
  display: grid;
  grid-template-columns: repeat(5, 1fr);
  grid-gap: 20px;
  padding: 0 20px;
}
.my-skills li {
  display: flex;
  flex-direction: column;
  font-size: 1.4rem;
}
.my-skills i {
  font-size: 6rem;
  margin-bottom: 10px;
}
.my-skills i:hover {
  color: #ffb400;
}
.my-skills ul {
  background-color: rgba(255, 255, 255, 0.07);
  padding: 20px 0;
  border-radius: 10px;
}
.my-skills img {
  height: 60px;
}

/*** Contact page ***/
.contact .wrapper {
  display: flex;
  justify-content: space-between;
}
/* contact info */
.contact-info {
  width: 28%;
}
.contact-info h2 {
  font-size: 2.6rem;
}
.contact-info p {
  font-size: 1.5rem;
  font-family: "Open Sans", sans-serif;
  margin-bottom: 25px;
}
.contact-info .email {
  display: flex;
}
.contact-info .email i {
  color: #ffb400;
  font-size: 3.6rem;
  margin-right: 12px;
}
.contact-info .email span {
  text-transform: uppercase;
  opacity: 0.8;
  margin-right: 60%;
}
.contact-info .social-links ul {
  display: flex;
  flex-wrap: wrap;
}
.contact-info .social-links li {
  margin-right: 10px;
  margin-bottom: 10px;
}
.contact-info a {
  display: flex;
  justify-content: center;
  align-items: center;
  background-color: #2b2a2a;
  height: 50px;
  width: 50px;
  border-radius: 50%;
  font-size: 2.1rem;
  transition: all 0.3s;
  cursor: pointer;
}
.contact-info .social-links a:hover {
  background-color: #ffb400;
}
/* ... */

